--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
-theme: jekyll-theme-architect
+theme: jekyll-theme-architect  
+title: MattDMSSA's homepage  
+description: Bookmark this to keep an eye on my project updates!  
